nsDocument::Destroy can cause our content to not have a document anymore, so look before dereferencing it. bug 282933, r=biesi sr=bzbarsky a=dveditz